derive/tests/fail/01-too-many-lifetimes.stderr
error: At most one lifetime parameter is allowed!
 --> tests/fail/01-too-many-lifetimes.rs:6:14
  |
6 | struct S<'a, 'b, T> {
  |              ^^
